package top.mcwebsite.interpreter_pattern;

/**
 * @author mengchen
 * @time 19-2-21 下午8:49
 */
public class Context {


}
