@startuml

class Client
class Context
abstract AbstractExpression
class TerminalExpression
class NonterminalExpression

Client -down-> Context
Client --right> AbstractExpression
TerminalExpression -up-|> AbstractExpression
NonterminalExpression -up-|> AbstractExpression
NonterminalExpression o--> AbstractExpression

@enduml
